apps/overlays/zion/umami/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: umami-noindex
  namespace: umami
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: "noindex, nofollow"
