apps/overlays/zion/umami/patch-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
spec:
  template:
    spec:
      containers:
        - name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: zion-db-pvc
